@@ -1,3 +1,8 @@
+2002-07-01  Simon Perkins  <s.perkins@lanl.gov>
+
+	* frmts/fits/fitsdataset.cpp: Modified creation options for FITS
+	driver and handling of "b-scaled" files. See docs for details.
+
 2002-06-12  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Converted to use Description and metadata for driver information.
